appId: waterwala.com.prime
---
- launchApp
- tapOn: "Mobile Number"
- inputText: "9876543210"
- tapOn: "Request OTP"
- assertVisible: "Enter OTP"
- assertVisible: "Submit the 4-digit OTP we sent to your mobile number 9876543210"
# OTP Entry using element id and index
- tapOn:
    id: "waterwala.com.prime:id/otp_view"
    index: 1
- inputText: "8"
- tapOn:
    id: "waterwala.com.prime:id/otp_view"
    index: 2
- inputText: "8"
- tapOn:
    id: "waterwala.com.prime:id/otp_view"
    index: 3
- inputText: "7"
- tapOn:
    id: "waterwala.com.prime:id/otp_view"
    index: 4
- inputText: "5"
- tapOn: "Continue"
- tapOn:
    id: "waterwala.com.prime:id/subscriberLayout"
- assertVisible:
    id: "waterwala.com.prime:id/tvDeviceName"
- tapOn:
    id: "waterwala.com.prime:id/ivButton"
- assertVisible:
    id: "waterwala.com.prime:id/tvMyPlan"
- tapOn:
    id: "waterwala.com.prime:id/ivRefreshData"
- tapOn: "Payments"
- tapOn:
    id: "waterwala.com.prime:id/fab"
- tapOn:
    id: "waterwala.com.prime:id/helpdeskFragment"
- tapOn:
    id: "waterwala.com.prime:id/menuFragment"