appId: waterwala.com.prime
---
- launchApp
- runFlow:
    when:
      visible: "Allow"
    commands:
      - tapOn: "Allow"
- runFlow:
    when:
      visible:
        id: "waterwala.com.prime:id/et_mobile"
    commands:
      - tapOn:
          id: "waterwala.com.prime:id/et_mobile"
      - takeScreenshot: "01_found_mobile_number.png"
- inputText: "9876543210"
- runFlow:
    when:
      visible: "Request OTP"
    commands:
      - tapOn: "Request OTP"

