appId: waterwala.com.prime
---
- launchApp
- extendedWaitUntil:
    visible:
      id: "waterwala.com.prime:id/et_mobile"
    timeout: 15000
- tapOn:
    id: "waterwala.com.prime:id/et_mobile"
- takeScreenshot: "01_found_mobile_number.png"
- inputText: "9876543210"
- tapOn: "Request OTP"
- extendedWaitUntil:
    visible:
      text: "Enter OTP"
    timeout: 10000
- assertVisible: "Enter OTP"
- extendedWaitUntil:
    visible:
      text: "Submit the 4-digit OTP we sent to your mobile number 9876543210"
    timeout: 8000
- assertVisible: "Submit the 4-digit OTP we sent to your mobile number 9876543210"
# OTP Entry using element id and index
- tapOn:
    id: "waterwala.com.prime:id/otp_view"
    index: 1
- inputText: "8"
- tapOn:
    id: "waterwala.com.prime:id/otp_view"
    index: 2
- inputText: "8"
- tapOn:
    id: "waterwala.com.prime:id/otp_view"
    index: 3
- inputText: "7"
- tapOn:
    id: "waterwala.com.prime:id/otp_view"
    index: 4
- inputText: "5"
- tapOn: "Continue"
- extendedWaitUntil:
    visible:
      id: "waterwala.com.prime:id/subscriberLayout"
    timeout: 12000
- tapOn:
    id: "waterwala.com.prime:id/subscriberLayout"
- extendedWaitUntil:
    visible:
      id: "waterwala.com.prime:id/tvDeviceName"
    timeout: 8000
- assertVisible:
    id: "waterwala.com.prime:id/tvDeviceName"
- tapOn:
    id: "waterwala.com.prime:id/ivButton"
- extendedWaitUntil:
    visible:
      id: "waterwala.com.prime:id/tvMyPlan"
    timeout: 8000
- assertVisible:
    id: "waterwala.com.prime:id/tvMyPlan"
- tapOn:
    id: "waterwala.com.prime:id/ivRefreshData"
- extendedWaitUntil:
    visible:
      text: "Payments"
    timeout: 8000
- tapOn: "Payments"
- extendedWaitUntil:
    visible:
      id: "waterwala.com.prime:id/fab"
    timeout: 8000
- tapOn:
    id: "waterwala.com.prime:id/fab"
- extendedWaitUntil:
    visible:
      id: "waterwala.com.prime:id/helpdeskFragment"
    timeout: 8000
- tapOn:
    id: "waterwala.com.prime:id/helpdeskFragment"
- extendedWaitUntil:
    visible:
      id: "waterwala.com.prime:id/menuFragment"
    timeout: 8000
- tapOn:
    id: "waterwala.com.prime:id/menuFragment"
